crates/otter-runtime/tests/compile_fail/worker_message_branded_weak_rejected.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/worker_message_branded_weak_rejected.rs:9:32
  |
9 |         worker.accepts_message(&weak);
  |                --------------- ^^^^^ expected `&StructuredCloneValue`, found `&Weak<'_, OpaqueLeaf>`
  |                |
  |                arguments to this method are incorrect
  |
  = note: expected reference `&StructuredCloneValue`
             found reference `&otter_gc::Weak<'_, OpaqueLeaf>`
note: method defined here
 --> src/worker.rs
  |
  |     pub fn accepts_message(&self, _message: &StructuredCloneValue) -> bool {
  |            ^^^^^^^^^^^^^^^
